[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/towers/laser_tower/laser_tower_5.png" type="Texture" id=1]
[ext_resource path="res://src/TowerManager.gd" type="Script" id=2]
[ext_resource path="res://assets/towers/shotgun_tower/shotgun_tower_5.png" type="Texture" id=3]
[ext_resource path="res://assets/crosshair.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8.04667, 8.19538 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 23.8953, 24.5054 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 23.0403, 24.3821 )

[node name="TowerManager" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LaserTower" type="Area2D" parent="CanvasLayer"]

[node name="Sprite" type="AnimatedSprite" parent="CanvasLayer/LaserTower"]
position = Vector2( 35, 558 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/LaserTower"]
position = Vector2( 35, 558 )
scale = Vector2( 3, 3 )
shape = SubResource( 5 )

[node name="ShotgunTower" type="Area2D" parent="CanvasLayer"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer/ShotgunTower"]
position = Vector2( 85, 558 )
scale = Vector2( 3, 3 )
frames = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/ShotgunTower"]
position = Vector2( 85, 558 )
shape = SubResource( 10 )

[node name="Missile" type="Area2D" parent="CanvasLayer"]

[node name="Sprite" type="Sprite" parent="CanvasLayer/Missile"]
position = Vector2( 135, 558 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Missile"]
position = Vector2( 135, 558 )
shape = SubResource( 11 )
[connection signal="mouse_entered" from="CanvasLayer/LaserTower" to="." method="_on_LaserTower_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/LaserTower" to="." method="_on_LaserTower_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/ShotgunTower" to="." method="_on_ShotgunTower_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/ShotgunTower" to="." method="_on_ShotgunTower_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Missile" to="." method="_on_Missile_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Missile" to="." method="_on_Missile_mouse_exited"]
